feat: updated versions

--- a/apps/http-test/src/app/components/common.component.html
+++ b/apps/http-test/src/app/components/common.component.html
@@ -1,2 +1,7 @@
-<button (click)="$event.preventDefault()">click</button>
+<button
+  type="button"
+  (click)="$event.preventDefault()"
+>
+  click
+</button>
 <pre>{{ textToDisplay() | json }}</pre>
